--- a/src/widgets/input.css
+++ b/src/widgets/input.css
@@ -161,3 +161,10 @@ input::placeholder {
   width: 16px;
   margin-right: 8px;
 }
+
+.monospace:focus,
+.password:focus,
+.input:focus {
+  border-color: var(--blue-50);
+  box-shadow: 0 0 0 1px #0a84ff, 0 0 0 4px rgba(10, 132, 255, .3);
+}
